# Inference-Service

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  rebuild.sh
benchmarks/: benchmark_utils.h  performance_benchmark.cpp
docs/: AGENTS.md  API_VERIFICATION.md  ARCHITECTURE.md  BATCH_PREPROCESSOR_GUIDE.md  HANDOVER.md  LEARNING_GUIDE.md  LLAMA_CPP_GUIDE.md  M10_UNIT_TESTS.md  TASKS.md  TEST_REPORT.md
include/: batch_preprocessor.h  detector.h  http_server.h  inference_backend.h  llm_generator.h  logger.h  ncnn_backend.h  onnx_backend.h  preprocess.h  timer.h  yolo_postprocess.h
src/: main.cpp
src/backend/: ncnn_backend.cpp  onnx_backend.cpp
src/detector/: object_detector.cpp
src/llm/: llm_generator.cpp
src/pipeline/: batch_preprocessor.cpp
src/postprocess/: yolo_postprocess.cpp
src/preprocess/: preprocess.cpp
src/server/: http_server.cpp
src/utils/: logger.cpp  timer.cpp
tests/: test_batch_preprocessor.cpp  test_logger.cpp  test_object_detector.cpp  test_preprocess.cpp  test_timer.cpp  test_yolo_postprocess.cpp
